Fixed spacing between project section and about section

--- a/src/components/About/Skills/styles/styles.css
+++ b/src/components/About/Skills/styles/styles.css
@@ -2,7 +2,8 @@
   font-size: 1.15rem;
   max-width: 800px;
   width: 80%;
-  margin: 4rem auto;
+  margin: 0 auto;
+  padding-bottom:4rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
